--- a/Lab_2_2_notebook.ipynb
+++ b/Lab_2_2_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "b21be645-b0b2-4e6c-9eba-080450073d86",
    "metadata": {},
    "outputs": [],
@@ -12,11 +12,7 @@
     "import polars as pl\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "\n",
     "\n"
    ]
   },
@@ -505,6 +501,20 @@
    "metadata": {},
    "source": [
     "# Grid search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be757371-3c40-48e5-a746-57f0ed90f5f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -1567,7 +1577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
