--- a/Activity_3_1/3_1_union_of_multiple_files_w_list_comprehensions.ipynb
+++ b/Activity_3_1/3_1_union_of_multiple_files_w_list_comprehensions.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,190 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "OneDrive - Minnesota State/DSCI 326/DSCI326_Repository/Activity_3_1/data/uber-raw-data-apr14-sample.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./data\\\\uber-raw-data-apr14-sample.csv',\n",
+       " './data\\\\uber-raw-data-aug14-sample.csv',\n",
+       " './data\\\\uber-raw-data-jul14-sample.csv',\n",
+       " './data\\\\uber-raw-data-jun14-sample.csv',\n",
+       " './data\\\\uber-raw-data-may14-sample.csv',\n",
+       " './data\\\\uber-raw-data-sep14-sample.csv']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from glob import glob\n",
+    "uber_files = glob('./data/uber-raw-data-*-sample.csv')\n",
+    "uber_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[shape: (100_000, 4)\n",
+       " ┌────────────────────┬─────────┬──────────┬────────┐\n",
+       " │ Date/Time          ┆ Lat     ┆ Lon      ┆ Base   │\n",
+       " │ ---                ┆ ---     ┆ ---      ┆ ---    │\n",
+       " │ str                ┆ f64     ┆ f64      ┆ str    │\n",
+       " ╞════════════════════╪═════════╪══════════╪════════╡\n",
+       " │ 4/18/2014 21:38:00 ┆ 40.7359 ┆ -73.9852 ┆ B02682 │\n",
+       " │ 4/23/2014 15:19:00 ┆ 40.7642 ┆ -73.9543 ┆ B02598 │\n",
+       " │ 4/10/2014 7:15:00  ┆ 40.7138 ┆ -74.0103 ┆ B02598 │\n",
+       " │ 4/11/2014 15:23:00 ┆ 40.7847 ┆ -73.9698 ┆ B02682 │\n",
+       " │ 4/7/2014 17:26:00  ┆ 40.646  ┆ -73.7767 ┆ B02598 │\n",
+       " │ …                  ┆ …       ┆ …        ┆ …      │\n",
+       " │ 4/26/2014 22:24:00 ┆ 40.7609 ┆ -73.9947 ┆ B02512 │\n",
+       " │ 4/25/2014 5:12:00  ┆ 40.7243 ┆ -73.9911 ┆ B02617 │\n",
+       " │ 4/18/2014 17:44:00 ┆ 40.721  ┆ -74.001  ┆ B02682 │\n",
+       " │ 4/25/2014 23:04:00 ┆ 40.7311 ┆ -74.0012 ┆ B02617 │\n",
+       " │ 4/18/2014 16:08:00 ┆ 40.7644 ┆ -73.9705 ┆ B02617 │\n",
+       " └────────────────────┴─────────┴──────────┴────────┘,\n",
+       " shape: (100_000, 4)\n",
+       " ┌────────────────────┬─────────┬──────────┬────────┐\n",
+       " │ Date/Time          ┆ Lat     ┆ Lon      ┆ Base   │\n",
+       " │ ---                ┆ ---     ┆ ---      ┆ ---    │\n",
+       " │ str                ┆ f64     ┆ f64      ┆ str    │\n",
+       " ╞════════════════════╪═════════╪══════════╪════════╡\n",
+       " │ 8/12/2014 19:19:00 ┆ 40.7062 ┆ -74.0145 ┆ B02598 │\n",
+       " │ 8/30/2014 17:39:00 ┆ 40.64   ┆ -73.9672 ┆ B02764 │\n",
+       " │ 8/3/2014 12:21:00  ┆ 40.7242 ┆ -73.9788 ┆ B02598 │\n",
+       " │ 8/15/2014 20:58:00 ┆ 40.739  ┆ -73.9779 ┆ B02617 │\n",
+       " │ 8/6/2014 19:12:00  ┆ 40.7256 ┆ -74.0051 ┆ B02617 │\n",
+       " │ …                  ┆ …       ┆ …        ┆ …      │\n",
+       " │ 8/25/2014 17:27:00 ┆ 40.7509 ┆ -73.9869 ┆ B02617 │\n",
+       " │ 8/19/2014 14:12:00 ┆ 41.0158 ┆ -73.7278 ┆ B02598 │\n",
+       " │ 8/27/2014 14:30:00 ┆ 40.7246 ┆ -73.9915 ┆ B02598 │\n",
+       " │ 8/16/2014 23:21:00 ┆ 40.7201 ┆ -73.9942 ┆ B02682 │\n",
+       " │ 8/28/2014 5:27:00  ┆ 40.685  ┆ -73.9999 ┆ B02682 │\n",
+       " └────────────────────┴─────────┴──────────┴────────┘,\n",
+       " shape: (100_000, 4)\n",
+       " ┌────────────────────┬─────────┬──────────┬────────┐\n",
+       " │ Date/Time          ┆ Lat     ┆ Lon      ┆ Base   │\n",
+       " │ ---                ┆ ---     ┆ ---      ┆ ---    │\n",
+       " │ str                ┆ f64     ┆ f64      ┆ str    │\n",
+       " ╞════════════════════╪═════════╪══════════╪════════╡\n",
+       " │ 7/29/2014 19:34:00 ┆ 40.714  ┆ -74.0144 ┆ B02682 │\n",
+       " │ 7/11/2014 10:24:00 ┆ 40.7264 ┆ -73.9553 ┆ B02617 │\n",
+       " │ 7/11/2014 18:44:00 ┆ 40.7394 ┆ -73.9912 ┆ B02617 │\n",
+       " │ 7/30/2014 10:29:00 ┆ 40.774  ┆ -73.8715 ┆ B02617 │\n",
+       " │ 7/10/2014 15:57:00 ┆ 40.7153 ┆ -74.0021 ┆ B02682 │\n",
+       " │ …                  ┆ …       ┆ …        ┆ …      │\n",
+       " │ 7/9/2014 7:17:00   ┆ 40.7329 ┆ -73.9794 ┆ B02617 │\n",
+       " │ 7/24/2014 13:34:00 ┆ 40.6713 ┆ -73.9846 ┆ B02682 │\n",
+       " │ 7/3/2014 10:06:00  ┆ 40.7623 ┆ -73.966  ┆ B02598 │\n",
+       " │ 7/8/2014 22:21:00  ┆ 40.767  ┆ -73.9171 ┆ B02617 │\n",
+       " │ 7/14/2014 17:01:00 ┆ 40.7331 ┆ -73.9948 ┆ B02682 │\n",
+       " └────────────────────┴─────────┴──────────┴────────┘,\n",
+       " shape: (100_000, 4)\n",
+       " ┌────────────────────┬─────────┬──────────┬────────┐\n",
+       " │ Date/Time          ┆ Lat     ┆ Lon      ┆ Base   │\n",
+       " │ ---                ┆ ---     ┆ ---      ┆ ---    │\n",
+       " │ str                ┆ f64     ┆ f64      ┆ str    │\n",
+       " ╞════════════════════╪═════════╪══════════╪════════╡\n",
+       " │ 6/19/2014 16:49:00 ┆ 40.7568 ┆ -73.9701 ┆ B02682 │\n",
+       " │ 6/12/2014 21:25:00 ┆ 40.6463 ┆ -73.7768 ┆ B02598 │\n",
+       " │ 6/15/2014 22:23:00 ┆ 40.7205 ┆ -73.9575 ┆ B02512 │\n",
+       " │ 6/14/2014 20:34:00 ┆ 40.7639 ┆ -73.9624 ┆ B02617 │\n",
+       " │ 6/13/2014 14:36:00 ┆ 40.7665 ┆ -73.9667 ┆ B02598 │\n",
+       " │ …                  ┆ …       ┆ …        ┆ …      │\n",
+       " │ 6/3/2014 17:49:00  ┆ 40.7226 ┆ -74.0035 ┆ B02617 │\n",
+       " │ 6/21/2014 23:12:00 ┆ 40.7298 ┆ -74.0045 ┆ B02512 │\n",
+       " │ 6/21/2014 22:12:00 ┆ 40.7025 ┆ -73.9932 ┆ B02598 │\n",
+       " │ 6/2/2014 7:33:00   ┆ 40.6484 ┆ -73.9784 ┆ B02617 │\n",
+       " │ 6/29/2014 16:35:00 ┆ 40.738  ┆ -74.0004 ┆ B02598 │\n",
+       " └────────────────────┴─────────┴──────────┴────────┘,\n",
+       " shape: (100_000, 4)\n",
+       " ┌────────────────────┬─────────┬──────────┬────────┐\n",
+       " │ Date/Time          ┆ Lat     ┆ Lon      ┆ Base   │\n",
+       " │ ---                ┆ ---     ┆ ---      ┆ ---    │\n",
+       " │ str                ┆ f64     ┆ f64      ┆ str    │\n",
+       " ╞════════════════════╪═════════╪══════════╪════════╡\n",
+       " │ 5/31/2014 18:57:00 ┆ 40.766  ┆ -73.9714 ┆ B02682 │\n",
+       " │ 5/13/2014 21:19:00 ┆ 40.7598 ┆ -73.9782 ┆ B02598 │\n",
+       " │ 5/21/2014 18:19:00 ┆ 40.7254 ┆ -73.9979 ┆ B02598 │\n",
+       " │ 5/20/2014 16:40:00 ┆ 40.6246 ┆ -73.9676 ┆ B02682 │\n",
+       " │ 5/22/2014 7:31:00  ┆ 40.7374 ┆ -73.9965 ┆ B02598 │\n",
+       " │ …                  ┆ …       ┆ …        ┆ …      │\n",
+       " │ 5/23/2014 22:41:00 ┆ 40.7341 ┆ -74.0084 ┆ B02682 │\n",
+       " │ 5/30/2014 6:53:00  ┆ 40.677  ┆ -74.0155 ┆ B02682 │\n",
+       " │ 5/3/2014 18:23:00  ┆ 40.771  ┆ -73.9636 ┆ B02682 │\n",
+       " │ 5/17/2014 13:16:00 ┆ 40.7586 ┆ -73.9614 ┆ B02598 │\n",
+       " │ 5/5/2014 22:37:00  ┆ 40.7792 ┆ -73.983  ┆ B02598 │\n",
+       " └────────────────────┴─────────┴──────────┴────────┘,\n",
+       " shape: (100_000, 4)\n",
+       " ┌────────────────────┬─────────┬──────────┬────────┐\n",
+       " │ Date/Time          ┆ Lat     ┆ Lon      ┆ Base   │\n",
+       " │ ---                ┆ ---     ┆ ---      ┆ ---    │\n",
+       " │ str                ┆ f64     ┆ f64      ┆ str    │\n",
+       " ╞════════════════════╪═════════╪══════════╪════════╡\n",
+       " │ 9/29/2014 22:30:00 ┆ 40.7848 ┆ -73.954  ┆ B02682 │\n",
+       " │ 9/26/2014 10:41:00 ┆ 40.7134 ┆ -73.9974 ┆ B02598 │\n",
+       " │ 9/9/2014 14:46:00  ┆ 40.7174 ┆ -73.9584 ┆ B02598 │\n",
+       " │ 9/19/2014 9:55:00  ┆ 40.6856 ┆ -73.9876 ┆ B02617 │\n",
+       " │ 9/12/2014 15:13:00 ┆ 40.775  ┆ -73.9548 ┆ B02617 │\n",
+       " │ …                  ┆ …       ┆ …        ┆ …      │\n",
+       " │ 9/13/2014 16:51:00 ┆ 40.7959 ┆ -73.9326 ┆ B02617 │\n",
+       " │ 9/22/2014 22:48:00 ┆ 40.7541 ┆ -73.949  ┆ B02617 │\n",
+       " │ 9/11/2014 22:38:00 ┆ 40.7292 ┆ -73.999  ┆ B02512 │\n",
+       " │ 9/10/2014 10:36:00 ┆ 40.7706 ┆ -73.8671 ┆ B02598 │\n",
+       " │ 9/13/2014 11:57:00 ┆ 40.6473 ┆ -73.9797 ┆ B02598 │\n",
+       " └────────────────────┴─────────┴──────────┴────────┘]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uber_by_month = [pl.read_csv(f) for f in uber_files]\n",
+    "uber_by_month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None, None, None, None]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "MONTH = re.compile(r'^\\./data\\/uber-raw-data-([a-zA-Z]{3})\\d{2}-sample\\.csv$')\n",
+    "get_month = lambda p: MONTH.match(p).group(1) if MONTH.match(p) else None\n",
+    "\n",
+    "month_names = [get_month(p) for p in uber_files]\n",
+    "month_names\n"
    ]
   }
  ],
