--- a/Activity_3_3/3_3_comprehensions_for_renaming_columns.ipynb
+++ b/Activity_3_3/3_3_comprehensions_for_renaming_columns.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        " 'F2.11']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "└──────┴────────────┴─────────────────────────────────┘"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,11 +859,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Year': 'year',\n",
+       " 'Type': 'type',\n",
+       " 'Spending (in billions, 2017 Purchasing Power Parity Dollars PPP $)': 'spending (in billions, 2017 purchasing power parity dollars ppp $)'}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Your code here\n",
+    "split_name = lambda n: n.split('')[0]\n",
+    "\n",
+    "{n:fix_name(n) for n in mexico_hc_spending.columns}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Your code here"
+    "mexico_hc_spending.columns\n",
+    "columns = ['Year',\n",
+    " 'Type',\n",
+    " 'Spending (in billions, 2017 Purchasing Power Parity Dollars PPP $)']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Year', 'Type', 'Spending']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define the lambda function to split on underscores\n",
+    "get_first_word = lambda column_name: column_name.split(' ')[0] if column_name else None\n",
+    "first_words = [get_first_word(column) for column in columns]\n",
+    "first_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (42, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Year</th><th>Type</th><th>Spending</th></tr><tr><td>i64</td><td>str</td><td>f64</td></tr></thead><tbody><tr><td>1995</td><td>&quot;Government&quot;</td><td>25.1</td></tr><tr><td>1996</td><td>&quot;Government&quot;</td><td>25.7</td></tr><tr><td>1997</td><td>&quot;Government&quot;</td><td>28.4</td></tr><tr><td>1998</td><td>&quot;Government&quot;</td><td>31.2</td></tr><tr><td>1999</td><td>&quot;Government&quot;</td><td>34.4</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2011</td><td>&quot;Out-of-pocket&quot;</td><td>53.2</td></tr><tr><td>2012</td><td>&quot;Out-of-pocket&quot;</td><td>54.7</td></tr><tr><td>2013</td><td>&quot;Out-of-pocket&quot;</td><td>55.2</td></tr><tr><td>2014</td><td>&quot;Out-of-pocket&quot;</td><td>54.6</td></tr><tr><td>2015</td><td>&quot;Out-of-pocket&quot;</td><td>56.8</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (42, 3)\n",
+       "┌──────┬───────────────┬──────────┐\n",
+       "│ Year ┆ Type          ┆ Spending │\n",
+       "│ ---  ┆ ---           ┆ ---      │\n",
+       "│ i64  ┆ str           ┆ f64      │\n",
+       "╞══════╪═══════════════╪══════════╡\n",
+       "│ 1995 ┆ Government    ┆ 25.1     │\n",
+       "│ 1996 ┆ Government    ┆ 25.7     │\n",
+       "│ 1997 ┆ Government    ┆ 28.4     │\n",
+       "│ 1998 ┆ Government    ┆ 31.2     │\n",
+       "│ 1999 ┆ Government    ┆ 34.4     │\n",
+       "│ …    ┆ …             ┆ …        │\n",
+       "│ 2011 ┆ Out-of-pocket ┆ 53.2     │\n",
+       "│ 2012 ┆ Out-of-pocket ┆ 54.7     │\n",
+       "│ 2013 ┆ Out-of-pocket ┆ 55.2     │\n",
+       "│ 2014 ┆ Out-of-pocket ┆ 54.6     │\n",
+       "│ 2015 ┆ Out-of-pocket ┆ 56.8     │\n",
+       "└──────┴───────────────┴──────────┘"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(mexico_hc_spending\n",
+    " .rename({col:split_name(col) for col in mexico_hc_spending.columns})\n",
+    ")"
    ]
   }
  ],
@@ -883,7 +983,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.7"
   },
   "nteract": {
    "version": "nteract-on-jupyter@2.0.3"
