--- a/Activity_3_3/3_4_comprehensions_for_selecting_and_dropping_columns.ipynb
+++ b/Activity_3_3/3_4_comprehensions_for_selecting_and_dropping_columns.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "└─────┴────────────┴────────────┴────────────┴───┴────────────┴────────────┴───────────┴───────────┘"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "└────────────┴────────────┴────────────┴───────────┴───────────┴───────────┴───────────┴───────────┘"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -183,7 +183,7 @@
        "└─────┴────────────┴────────────┴────────────┴───┴────────────┴────────────┴───────────┴───────────┘"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "└──────────┴─────────────────┴─────────────────┴─────────────────┴────────────────┴────────────────┘"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "└─────┴────────────┴────────────┴────────────┴───┴────────────┴────────────┴───────────┴───────────┘"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "└──────────┴─────────────────┴─────────────────┴─────────────────┴────────────────┴────────────────┘"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "└──────────┴─────────────────┴─────────────────┴─────────────────┴────────────────┴────────────────┘"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        " 'sort']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "6"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
        " 'f2_11']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        " 'f2_11']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,11 +666,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ID', 'f1', 'f5', 'f2', 'f1_1', 'f2_1', 'f6']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "to_ = lambda df, col: [c for i, c in enumerate(df.columns) if i <= df.columns.index(col)]\n",
+    "\n",
+    "to_(survey, 'f6')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['f2', 'f1_1', 'f2_1', 'f6']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "between_ = lambda df, col1, col2: [c for i, c in enumerate(df.columns) if df.columns.index(col1) <= i <= df.columns.index(col2)]\n",
+    "\n",
+    "between_(survey,'f2','f6')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ID',\n",
+       " 'f1',\n",
+       " 'f5',\n",
+       " 'f2',\n",
+       " 'f1_1',\n",
+       " 'f2_1',\n",
+       " 'f6',\n",
+       " 'f4',\n",
+       " 'f3',\n",
+       " 'f5_1',\n",
+       " 'f1_2',\n",
+       " 'f2_2',\n",
+       " 'f6_1',\n",
+       " 'f2_3',\n",
+       " 'f4_1',\n",
+       " 'f2_4',\n",
+       " 'f5_2',\n",
+       " 'f2_5',\n",
+       " 'f6_2',\n",
+       " 'f1_3',\n",
+       " 'f2_6',\n",
+       " 'f5_3',\n",
+       " 'f4_2',\n",
+       " 'f2_7',\n",
+       " 'f3_1',\n",
+       " 'f2_8',\n",
+       " 'f5_4',\n",
+       " 'f3_2',\n",
+       " 'f1_4',\n",
+       " 'f3_3',\n",
+       " 'f1_5',\n",
+       " 'f5_5',\n",
+       " 'f6_3',\n",
+       " 'f1_6',\n",
+       " 'f5_6',\n",
+       " 'f2_9',\n",
+       " 'f3_4',\n",
+       " 'f4_3',\n",
+       " 'f2_10',\n",
+       " 'f1_7',\n",
+       " 'f6_4',\n",
+       " 'f4_4',\n",
+       " 'f5_7',\n",
+       " 'f3_5',\n",
+       " 'f2_11']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "survey.columns"
    ]
   }
  ],
@@ -690,7 +790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.7"
   },
   "nteract": {
    "version": "nteract-on-jupyter@2.0.3"
