--- a/CMS_hospital_data_download.ipynb
+++ b/CMS_hospital_data_download.ipynb
@@ -281,19 +281,16 @@
    "source": [
     "for year in [year for year, url in urls]:\n",
     "    year_folder = f'./Data/hospital_{year}'\n",
-    "    \n",
     "    for root, dirs, files in os.walk(year_folder):\n",
     "        for file in files:\n",
     "            if file.endswith('.zip'):\n",
     "                zip_file_path = os.path.join(root, file)\n",
-    "                \n",
-    "                # Create a folder for each inner zip file\n",
-    "                inner_folder = os.path.join(root, file[:-4])  # Remove '.zip' from filename\n",
+    "                inner_folder = os.path.join(root, file[:-4]) \n",
     "                os.makedirs(inner_folder, exist_ok=True)\n",
     "                \n",
     "                try:\n",
     "                    with zipfile.ZipFile(zip_file_path) as inner_zip:\n",
-    "                        inner_zip.extractall(inner_folder)  # Extract to the inner folder\n",
+    "                        inner_zip.extractall(inner_folder)  \n",
     "                    print(f'Successfully extracted {zip_file_path} to {inner_folder}')\n",
     "                    \n",
     "                except Exception as e:\n",
